--- a/InvertedPendulum/LAFEM_Exp3.org
+++ b/InvertedPendulum/LAFEM_Exp3.org
@@ -1,34 +1,6 @@
-#+TITLE: Expérience simple pour valider LAFEM
-* Description
+#+TITLE: SCIRL, Pendule, Dégradé
 
-  Dans cette troisième expérience, un expert est entraîné sur le problème du pendule inversé. Il fournit quelques transitions, le calcul de $\mu_E$ est est effectué grâce à LSTD$\mu$, une fonction de perte simple ($1$ en cas de désaccord avec l'expert, $0$ sinon), une initialisation de la récompense à une valeur négative partout.
-
-  Le but de l'expérience est de savoir si LAFEM est en mesure de fournir une récompense permettant à l'agent de balancer le pendule avec pour seules et uniques données celles fournies au début.
-
-  Si elle est concluante, des expériences futures étudieront l'influence des différents paramètres sur les performances de l'algorithme.
-
-  Si elle n'est pas concluante, on essaiera de trouver une valeur dans l'erreur de l'estimation de $\mu$ à partir de laquelle cela cesse de fonctionner.
-
-  Il y a beaucoup de code commun avec la [[file:LAFEM_Exp2.org][seconde expérience]], on reprend notamment certains targets du Makefile.
-
-  L'expérience se déroule comme suit :
-  - [ ] Créer une base de données $D_0$ de transitions aléatoires.
-  - [ ] Entraîner un expert en utilisant LSPI nourri avec ces transitions ($\pi_E : S\rightarrow A$)
-  - [ ] Vérifier que l'expert est en mesure de balancer le pendule durant 3000 pas de temps
-  - [ ] Créer une base de données $D_E$ de transitions de l'expert. L'expérience sur LSTD$\mu$ a prouvé qu'une seule trajectoire était suffisante. On en prend une dizaine pour être sûrs.
-  - [ ] Définir $l$ telle que $l(s,a) = 0$ si $a=\pi_E(s)$, $1$ sinon, $l$ est définie sur les états présents dans $D_E$.
-  - [ ] Définir $\alpha(t) = 0.1,\forall t$ (pifomètre)
-  - [ ] Définir $D$ à partir des transitions $D_E$ en enlevant l'état d'arrivée
-  - [ ] Initialiser $\theta_0 = [-1...-1]^T$
-  - [ ] Fixer $T=20$ (pifomètre)
-  - [ ] Définir $\mu_E(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \phi(s)\right|s_0 = s, a_0 = a, \pi_E\right]$ comme étant en pratique $\hat\mu_E(s,a) =  \omega^T_{\pi_E}\phi(s,a), \omega_{\pi_E} = LSTD\mu(D_E)$
-  - [ ] Faire tourner LAFEM
-  - [ ] Entrainer un agent sur le problème du pendule inversé, avec la récompense trouvée par LAFEM : définir $\pi : S\rightarrow A$
-  - [ ] Regarder durant combien de pas de temps l'agent arrrive à faire tenir le pendule. Comparer à l'expert et à une politique aléatoire
-  - [ ] Afficher la fonction de valeur de l'expert
-  - [ ] Afficher la fonction de valeur de l'agent
-  - [ ] Afficher la fonction de récompense sur laquelle l'expert a été entraîné
-  - [ ] Afficher la fonction de récompense retrouvée par LAFEM
+On reprend une expérience précédente pour l'intégrer dans le [[file:../Protocoles.org]].
 
 * Code								       :code:
 ** Experiment targets
@@ -130,8 +102,8 @@ LAFEM_Exp3_LSTDmu.o: LAFEM_Exp3_LSTDmu.c InvertedPendulum.h ../LSTDmu.h ../utils
 LAFEM_Exp3_LSTDmu.c: LAFEM_Exp3.org
 	$(call tangle,"LAFEM_Exp3.org")
 
-omega_mu_E.mat: LAFEM_Exp3_LSTDmu.exe omega_expert.mat D_expert.mat
-	./LAFEM_Exp3_LSTDmu.exe > omega_mu_E.mat
+LAFEM_Exp3_omega_mu_E.mat: LAFEM_Exp3_LSTDmu.exe LAFEM_Exp2_omega_expert.mat D_expert.mat
+	./LAFEM_Exp3_LSTDmu.exe > LAFEM_Exp3_omega_mu_E.mat
 
 #+end_src
 
@@ -154,7 +126,7 @@ class LAFEM_Exp3( LAFEM ):
         for trans in D_E:
             self.dicPi_E[l2str(trans[0:2])] = trans[2:3][0]
             self.data = self.data +[[ trans[0:2], trans[2:3][0]]]
-        self.omega_mu_E = genfromtxt( "omega_mu_E.mat" )
+        self.omega_mu_E = genfromtxt( "LAFEM_Exp3_omega_mu_E.mat" )
 
 #+end_src
      
@@ -197,11 +169,11 @@ class LAFEM_Exp3( LAFEM ):
         #return (zeros((1,10)) + answer).transpose() #Ugly hack to get a column vector and not a line vector
 
     def alpha( self, t ):
-        return 3000./(t+1.)
+        return 10./(t+1.)
 
-    theta_0 = zeros( (10, 1) ) - 1.
+    theta_0 = zeros( (10, 1) ) 
 
-    Threshold = 0.1
+    Threshold = 0.2
     T = 20
 
 #+end_src
@@ -220,8 +192,8 @@ print a2str(omega_lafem)
 LAFEM_Exp3.py: LAFEM_Exp3.org
 	$(call tangle,"LAFEM_Exp3.org")
 
-theta_lafem_mu.mat: LAFEM_Exp3.py ../a2str.py ../LAFEM.py omega_mu_E.mat D_expert.mat
-	python LAFEM_Exp3.py > theta_lafem_mu.mat
+LAFEM_Exp3_theta_lafem_mu.mat: LAFEM_Exp3.py ../a2str.py ../LAFEM.py LAFEM_Exp3_omega_mu_E.mat D_expert.mat
+	python LAFEM_Exp3.py > LAFEM_Exp3_theta_lafem_mu.mat
 
 #+end_src
 
@@ -230,8 +202,8 @@ theta_lafem_mu.mat: LAFEM_Exp3.py ../a2str.py ../LAFEM.py omega_mu_E.mat D_exper
 
 #+srcname: LAFEM_Exp3_make
 #+begin_src makefile
-omega_lafem_mu.mat: LAFEM_Exp2_Results.exe theta_lafem_mu.mat
-	./LAFEM_Exp2_Results.exe theta_lafem_mu.mat > omega_lafem_mu.mat
+LAFEM_Exp3_omega_lafem_mu.mat: LAFEM_Exp2_Results.exe LAFEM_Exp3_theta_lafem_mu.mat
+	./LAFEM_Exp2_Results.exe LAFEM_Exp3_theta_lafem_mu.mat > LAFEM_Exp3_omega_lafem_mu.mat
 
 #+end_src
 
@@ -240,17 +212,17 @@ The relevant makefile rules.
 
 #+srcname: LAFEM_Exp3_make
 #+begin_src makefile
-LAFEM_Exp3_true_R.mat: LAFEM_Exp2_Plot.exe theta_lafem_mu.mat omega_lafem_mu.mat 
-	./LAFEM_Exp2_Plot.exe theta_lafem_mu.mat omega_lafem_mu.mat LAFEM_Exp3
+LAFEM_Exp3_true_R.mat: LAFEM_Exp2_Plot.exe LAFEM_Exp3_theta_lafem_mu.mat LAFEM_Exp3_omega_lafem_mu.mat 
+	./LAFEM_Exp2_Plot.exe LAFEM_Exp3_theta_lafem_mu.mat LAFEM_Exp3_omega_lafem_mu.mat LAFEM_Exp3
 
-LAFEM_Exp3_lafem_R.mat: LAFEM_Exp2_Plot.exe theta_lafem_mu.mat omega_lafem_mu.mat
-	./LAFEM_Exp2_Plot.exe theta_lafem_mu.mat omega_lafem_mu.mat LAFEM_Exp3
+LAFEM_Exp3_lafem_R.mat: LAFEM_Exp2_Plot.exe LAFEM_Exp3_theta_lafem_mu.mat LAFEM_Exp3_omega_lafem_mu.mat
+	./LAFEM_Exp2_Plot.exe LAFEM_Exp3_theta_lafem_mu.mat LAFEM_Exp3_omega_lafem_mu.mat LAFEM_Exp3
 
-LAFEM_Exp3_Vexpert.mat: LAFEM_Exp2_Plot.exe theta_lafem_mu.mat omega_lafem_mu.mat 
-	./LAFEM_Exp2_Plot.exe theta_lafem_mu.mat omega_lafem_mu.mat LAFEM_Exp3
+LAFEM_Exp3_Vexpert.mat: LAFEM_Exp2_Plot.exe LAFEM_Exp3_theta_lafem_mu.mat LAFEM_Exp3_omega_lafem_mu.mat 
+	./LAFEM_Exp2_Plot.exe LAFEM_Exp3_theta_lafem_mu.mat LAFEM_Exp3_omega_lafem_mu.mat LAFEM_Exp3
 
-LAFEM_Exp3_Vagent.mat: LAFEM_Exp2_Plot.exe theta_lafem_mu.mat omega_lafem_mu.mat 
-	./LAFEM_Exp2_Plot.exe theta_lafem_mu.mat omega_lafem_mu.mat LAFEM_Exp3
+LAFEM_Exp3_Vagent.mat: LAFEM_Exp2_Plot.exe LAFEM_Exp3_theta_lafem_mu.mat LAFEM_Exp3_omega_lafem_mu.mat 
+	./LAFEM_Exp2_Plot.exe LAFEM_Exp3_theta_lafem_mu.mat LAFEM_Exp3_omega_lafem_mu.mat LAFEM_Exp3
 
 
 
@@ -363,9 +335,9 @@ LAFEM_Exp3_Vagent.pdf: LAFEM_Exp3_Vagent.gp LAFEM_Exp3_Vagent.mat
 LAFEM_Exp3_clean:
 	find . -maxdepth 1 -iname "LAFEM_Exp3_*"   | xargs $(XARGS_OPT) rm
 	find . -maxdepth 1 -iname "LAFEM_Exp3.py"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "omega_mu_E.mat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "omega_lafem_mu.mat"   | xargs $(XARGS_OPT) rm
-	find . -maxdepth 1 -iname "theta_lafem_mu.mat"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "LAFEM_Exp3_omega_mu_E.mat"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "LAFEM_Exp3_omega_lafem_mu.mat"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "LAFEM_Exp3_theta_lafem_mu.mat"   | xargs $(XARGS_OPT) rm
   #+end_src
 
 * Résultats
