Expérience : Highway, ANIRL, Parfait
 : make ANIRM_Exp5

On trouve \epsilon = 0.03, T = 70, l'expérience est un succès.

--- a/DP_mu.org
+++ b/DP_mu.org
@@ -69,7 +69,7 @@ def DP_mu( pi, Phi ):
         if diff > 0.00001:
             changed = True
         else:
-            changed = False
+            changed = False<
     return answer
 #+end_src
 
