Expérience : Highway, SCIRL, Dégradé
 : make SCIRL_Exp3

L'expérience est un succès, on arrive à la même valeur en l'état initial que l'expert.

Une trajectoire est suffisante, il faudrait refaire l'expérience en faisant varier le nombre de samples de cette trajectoire et constater l'évolution avec des barres d'erreur.

--- a/DP_mu.org
+++ b/DP_mu.org
@@ -55,6 +55,19 @@ FIXME: Mettre le code en adéquation avec le header
 from numpy import *
 import scipy
 
+#FIXME: Cette fonction n'a rien a faire la, mais je la rangerai plus tard
+def monte_carlo_mu( traj, gamma, psi ):
+    #try:
+    assert( len( traj.shape ) == 2 )
+    #except AssertionError: #Trajectory with only one transition
+    #    return psi( traj )
+    mGamma = map( lambda i: pow( 0.9,i),range(0,traj.shape[0]) )
+    mPsi = map( psi, traj )
+    mDiscountedPsi = map( lambda gamma, psi : gamma*psi, mGamma, mPsi )
+    return sum( mDiscountedPsi, 0 )
+    
+
+
 g_fGamma = 0.9
 
 def DP_mu( pi, Phi ):
@@ -66,11 +79,12 @@ def DP_mu( pi, Phi ):
         new_answer = Phi + g_fGamma*dot(pi,answer)
         diff = sum( abs( new_answer - answer ) )
         answer = new_answer
-        if diff > 0.00001:
+        if diff > 0.001:
             changed = True
         else:
-            changed = False<
+            changed = False
     return answer
+
 #+end_src
 
 * Makefile rules
